--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
     // ====== 설정 ======
     const FOOTER_TEXT = "Linkedin Korea Partner_HR Point";
     const SHEET_WEBAPP_URL = "https://script.google.com/macros/s/AKfycbzNbJDQT5e49GQaFgOMEpECIfkBahXhtZbqLMW-zyeHY5jkg-aX3u0vqf62B56OmgId-Q/exec";
-    const DEBUG_SHEET_LOG = true; // 저장 요청 URL을 콘솔에 찍습니다.
+    const DEBUG_SHEET_LOG = true; // 콘솔에 저장 URL 출력
 
     const PRICES = {
       recruiter: 11350,
@@ -550,7 +550,10 @@
       `;
     }
 
-    // ✅ 시트 저장: sendBeacon(가능하면) → 이미지 비콘 fallback
+    /**
+     * ✅ 시트 저장(최종): sendBeacon 제거
+     * - 무조건 GET + querystring (Image 비콘)으로 보내서 Apps Script e.parameter가 항상 채워지게 함
+     */
     async function saveToSheet(payload){
       const params = new URLSearchParams();
       params.set('savedAt', payload.savedAt || new Date().toISOString());
@@ -568,24 +571,12 @@
       params.set('_ts', String(Date.now())); // cache buster
 
       const url = `${SHEET_WEBAPP_URL}?${params.toString()}`;
+      if (DEBUG_SHEET_LOG) console.log('[SHEET] IMG GET:', url);
 
-      if (DEBUG_SHEET_LOG) console.log('[SHEET] sending:', url);
-
-      // 1) sendBeacon 시도 (응답은 못 받지만 전송 성공률 높음)
-      try{
-        if (navigator.sendBeacon) {
-          const ok = navigator.sendBeacon(url, new Blob([], {type:'text/plain'}));
-          if (DEBUG_SHEET_LOG) console.log('[SHEET] sendBeacon result:', ok);
-          // sendBeacon이 false여도 fallback 진행
-          if (ok) return true;
-        }
-      }catch(e){}
-
-      // 2) 이미지 비콘 fallback
       return new Promise((resolve) => {
         const img = new Image();
         img.onload = () => resolve(true);
-        img.onerror = () => resolve(true); // GAS는 JSON 반환이라 error여도 요청은 나감
+        img.onerror = () => resolve(true); // 응답이 이미지가 아니라도 요청은 전송됨
         img.src = url;
         setTimeout(() => resolve(true), 2000);
       });
@@ -599,14 +590,23 @@
       const quoteDate = new Date().toISOString().slice(0,10);
       const validUntil = addDaysISO(quoteDate, 20);
 
-      const companyName  = $('companyName').value?.trim() || '-';
-      const contactName  = $('contactName').value?.trim() || '-';
-      const contactEmail = $('contactEmail').value?.trim() || '-';
+      // ✅ 저장용은 빈 값이면 빈 값으로(시트에 '-' 저장 방지)
+      const companyNameSave  = (document.getElementById('companyName')?.value || '').trim();
+      const contactNameSave  = (document.getElementById('contactName')?.value || '').trim();
+      const contactEmailSave = (document.getElementById('contactEmail')?.value || '').trim();
+
+      // ✅ PDF 표시용은 '-' 가능
+      const companyNamePdf  = companyNameSave  || '-';
+      const contactNamePdf  = contactNameSave  || '-';
+      const contactEmailPdf = contactEmailSave || '-';
 
       // 1) 시트 저장(먼저)
       await saveToSheet({
         savedAt: new Date().toISOString(),
-        quoteNo, companyName, contactName, contactEmail,
+        quoteNo,
+        companyName: companyNameSave,
+        contactName: contactNameSave,
+        contactEmail: contactEmailSave,
         currency: 'USD',
         totalUSD: Math.round(total || 0),
         selectedCount: rows.length,
@@ -616,7 +616,13 @@
 
       // 2) PDF 생성(캡처)
       const pdfEl = document.getElementById('pdfRender');
-      pdfEl.innerHTML = buildPdfHtml({ quoteNo, quoteDate, validUntil, companyName, contactName, contactEmail, rows, total, aiTier });
+      pdfEl.innerHTML = buildPdfHtml({
+        quoteNo, quoteDate, validUntil,
+        companyName: companyNamePdf,
+        contactName: contactNamePdf,
+        contactEmail: contactEmailPdf,
+        rows, total, aiTier
+      });
 
       const canvas = await html2canvas(pdfEl, { scale: 2, useCORS: true, backgroundColor: '#ffffff' });
       const imgData = canvas.toDataURL('image/png');
@@ -748,19 +754,9 @@
   </script>
 
   <!--
-    ✅ 매우 중요: Apps Script(WebApp) 코드가 doGet(e)로 파라미터를 받아 appendRow 해야 저장됩니다.
-    예시(Code.gs):
-
-    const SHEET_NAME='Leads';
-    function doGet(e){
-      const sh = SpreadsheetApp.getActiveSpreadsheet().getSheetByName(SHEET_NAME) || SpreadsheetApp.getActiveSpreadsheet().insertSheet(SHEET_NAME);
-      if(sh.getLastRow()===0) sh.appendRow(['savedAt','quoteNo','companyName','contactName','contactEmail','currency','totalUSD','selectedCount','selectedSummary','aiTier','userAgent','pageUrl']);
-      const p=e.parameter||{};
-      sh.appendRow([p.savedAt||new Date().toISOString(),p.quoteNo||'',p.companyName||'',p.contactName||'',p.contactEmail||'',p.currency||'USD',p.totalUSD||'',p.selectedCount||'',p.selectedSummary||'',p.aiTier||'',p.userAgent||'',p.pageUrl||'']);
-      return ContentService.createTextOutput('ok');
-    }
-
-    그리고 웹앱 배포에서 "모든 사용자(Anyone)"로 접근 허용해야 합니다.
+    ✅ Apps Script(WebApp) doGet(e)에서 e.parameter.companyName/contactName/... 를 읽어 appendRow 해야 합니다.
+    테스트처럼 URL을 직접 열면 잘 들어가는데, 계산기에서는 시간만 들어간다면
+    sendBeacon이 query를 망치는 케이스가 많아서 "Image GET만"으로 강제한 버전입니다.
   -->
 </body>
 </html>
