--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
     input[type="date"]{font-family:inherit;font-size:13px;color:var(--text)}
     input:focus, select:focus{border-color:rgba(96,165,250,.6);box-shadow:0 0 0 3px rgba(96,165,250,.14)}
     input[readonly]{opacity:.92}
+    .noPick{
+      pointer-events:none;
+      user-select:none;
+      opacity:.95;
+    }
 
     .rows{display:grid;gap:14px}
     .row{display:grid;grid-template-columns:1fr 160px 160px;gap:12px;align-items:end;padding:10px 0}
@@ -93,7 +98,7 @@
     .productRow{border-top:1px solid rgba(31,41,55,.85)}
     .productRow:first-child{border-top:none}
 
-    table{width:100%;border-collapse:separate;border-spacing:0}
+    table{width:100%;border-collapse:separate;border-spacing:0;min-width:620px}
     th, td{padding:10px 10px;border-bottom:1px solid var(--line);vertical-align:top}
     th{font-size:12px;color:#cbd5e1;text-align:left;background:rgba(11,18,32,.35)}
     td{font-size:13px}
@@ -102,7 +107,8 @@
     .kpis{display:grid;gap:10px}
     .kpi{padding:12px;border:1px solid var(--line);border-radius:14px;background:rgba(11,18,32,.55)}
     .kpi .t{font-size:12px;color:var(--muted)}
-    .kpi .v{font-size:20px;font-weight:900;margin-top:6px;letter-spacing:-.2px}
+    .kpi .v{font-size:28px;font-weight:1000;margin-top:6px;letter-spacing:-.3px}
+    .vatSmall{font-size:10px;color:var(--muted);margin-top:6px}
 
     .callout{
       margin-top:12px;padding:10px 12px;border-radius:14px;
@@ -123,13 +129,23 @@
       padding:12px;
     }
 
+    .tableWrap{
+      overflow-x:auto;
+      -webkit-overflow-scrolling:touch;
+      border-radius:14px;
+      border:1px solid rgba(31,41,55,.55);
+    }
+
     .sticky{
       position:fixed;left:0;right:0;bottom:0;padding:14px 14px;
       background:rgba(8,12,18,.72);backdrop-filter:blur(10px);
       border-top:1px solid var(--line)
     }
     .sticky .inner{max-width:1120px;margin:0 auto;display:flex;gap:10px;align-items:center;justify-content:space-between;flex-wrap:wrap}
-    .btns{display:flex;gap:10px;flex-wrap:wrap}
+    .btnsLeft{display:flex;gap:10px;flex-wrap:wrap}
+    .btnsRight{display:flex;gap:10px;flex-wrap:wrap;justify-content:flex-end}
+    .btnsRight{margin-left:auto}
+    .btnGap{margin-left:8px}
 
     button{
       appearance:none;border:1px solid var(--line);background:var(--soft);color:var(--text);
@@ -146,13 +162,13 @@
     .toast{position:fixed;left:50%;bottom:80px;transform:translateX(-50%);background:rgba(17,24,39,.92);border:1px solid var(--line);padding:10px 12px;border-radius:12px;box-shadow:0 12px 24px rgba(0,0,0,.35);font-size:13px;display:none;z-index:9999}
     .mono{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace}
 
-    .discountNote{
+    .muted{color:var(--muted)}
+
+    .footNote{
       margin-top:10px;
-      font-size:12px;
+      font-size:11px;
       color:var(--muted);
-      line-height:1.5;
-      border-top:1px dashed rgba(31,41,55,.8);
-      padding-top:10px;
+      line-height:1.45;
     }
   </style>
 
@@ -204,15 +220,15 @@
               <div class="row" style="grid-template-columns:1fr 1fr 1fr;align-items:end">
                 <div>
                   <label for="quoteNo">견적번호</label>
-                  <input id="quoteNo" class="mono" placeholder="자동 생성" />
+                  <input id="quoteNo" class="mono" placeholder="자동 생성" readonly />
                 </div>
                 <div>
                   <label for="quoteDate">견적일</label>
-                  <input id="quoteDate" type="date" />
+                  <input id="quoteDate" type="date" class="noPick" readonly />
                 </div>
                 <div>
                   <label for="validUntil">유효기간</label>
-                  <input id="validUntil" type="date" readonly />
+                  <input id="validUntil" type="date" class="noPick" readonly />
                 </div>
               </div>
 
@@ -292,10 +308,9 @@
                 </div>
 
                 <div class="row" style="grid-template-columns:1fr 160px 160px">
-                  <div class="desc">※ 13억명 후보자 중 Tier별 AI평가:
-Tier1=200, Tier2=800, Tier3=1500</div>
+                  <div class="desc muted">※ Tier 설명은 견적서에 포함되지 않습니다.</div>
                   <div>
-                    <label>13억명 후보자 중 AI평가</label>
+                    <label>후보자 중 AI평가</label>
                     <input id="aiCapacity" readonly />
                   </div>
                   <div>
@@ -364,11 +379,7 @@ Tier1=200, Tier2=800, Tier3=1500</div>
             <div class="kpi">
               <div class="t">총 합계</div>
               <div class="v" id="total">-</div>
-              <div class="muted">※ 부가세 없음</div>
-
-              <div class="discountNote" id="discountNote">
-                할인내용 : 그룹사 가격, 다년계약, 볼륨할인 등 문의
-              </div>
+              <div class="vatSmall">※ 부가세 없음</div>
             </div>
 
             <div class="kpi">
@@ -379,23 +390,25 @@ Tier1=200, Tier2=800, Tier3=1500</div>
 
           <div style="height:12px"></div>
 
-          <table>
-            <thead>
-              <tr>
-                <th>항목</th>
-                <th class="right">단가(USD)</th>
-                <th class="right">수량</th>
-                <th class="right">금액(USD)</th>
-              </tr>
-            </thead>
-            <tbody id="tbody"></tbody>
-            <tfoot>
-              <tr>
-                <th colspan="3" class="right">합계</th>
-                <th class="right" id="total2">-</th>
-              </tr>
-            </tfoot>
-          </table>
+          <div class="tableWrap">
+            <table>
+              <thead>
+                <tr>
+                  <th>항목</th>
+                  <th class="right">단가(USD)</th>
+                  <th class="right">수량</th>
+                  <th class="right">금액(USD)</th>
+                </tr>
+              </thead>
+              <tbody id="tbody"></tbody>
+              <tfoot>
+                <tr>
+                  <th colspan="3" class="right">합계</th>
+                  <th class="right" id="total2">-</th>
+                </tr>
+              </tfoot>
+            </table>
+          </div>
 
           <div id="minNotice" style="margin-top:10px;font-size:12px;font-weight:800;color:var(--warn);display:none;line-height:1.5">
             기업용 솔루션은 최소 합계금액이 $10,000 부터 계약이 가능합니다.<br/>
@@ -407,6 +420,7 @@ Tier1=200, Tier2=800, Tier3=1500</div>
             Linkedin Korea Partner<br/>
             02-6405-4446<br/>
             help@hrpoint.co.kr
+            <div class="footNote">할인내용 : 그룹사 가격, 다년계약, 볼륨할인 등 문의</div>
           </div>
         </div>
       </div>
@@ -417,10 +431,12 @@ Tier1=200, Tier2=800, Tier3=1500</div>
 
   <div class="sticky">
     <div class="inner">
-      <div class="meta">버튼을 누르면 입력값 기준으로 견적서(PDF)가 다운로드됩니다. (USD 기준 · 부가세 없음)</div>
-      <div class="btns">
-        <button id="btnCopyLink">입력값 링크 복사</button>
+      <div class="meta">맨 하단에 견적서를 pdf로 다운받을수 있습니다. 본 견적서는 단순 참고용입니다.</div>
+      <div class="btnsLeft">
         <button id="btnReset">초기화</button>
+      </div>
+      <div class="btnsRight">
+        <button id="btnCopyLink" class="btnGap">견적서 결과 링크복사</button>
         <button class="primary" id="btnPdf">견적서 다운로드(PDF)</button>
       </div>
     </div>
@@ -454,7 +470,7 @@ Tier1=200, Tier2=800, Tier3=1500</div>
         return;
       }
       if (!__koreanFontLoading) {
-        __koreanFontLoading = fetch(KOREAN_FONT_URL)
+        __koreanFontLoading = fetch(KOREAN_FONT_URL, { cache: "force-cache" })
           .then(r => { if (!r.ok) throw new Error("Font download failed"); return r.arrayBuffer(); })
           .then(buf => (__koreanFontB64 = __arrayBufferToBase64(buf)));
       }
@@ -513,11 +529,55 @@ Tier1=200, Tier2=800, Tier3=1500</div>
       return d.toISOString().slice(0,10);
     };
 
+    // === "상품내용 변경없을시 동일브라우저 견적번호 고정" ===
+    function getProductSignature(){
+      const sigObj = {
+        qtyRecruiter: $('qtyRecruiter')?.value || '0',
+        qtyJob: $('qtyJob')?.value || '0',
+        aiTier: $('aiTier')?.value || 'none',
+        lifeInclude: $('lifeInclude')?.value || 'no',
+        qtyLTI: $('qtyLTI')?.value || '0'
+      };
+      return JSON.stringify(sigObj);
+    }
+
+    function syncQuoteNoBySignature(){
+      const sig = getProductSignature();
+      const lastSig = localStorage.getItem('lk_quote_sig');
+      const lastNo = localStorage.getItem('lk_quote_no');
+
+      if (lastSig === sig && lastNo) {
+        $('quoteNo').value = lastNo;
+        return;
+      }
+      const newNo = genQuoteNo();
+      $('quoteNo').value = newNo;
+      localStorage.setItem('lk_quote_sig', sig);
+      localStorage.setItem('lk_quote_no', newNo);
+    }
+
     function setDefaultQuoteFields(){
       const today = new Date().toISOString().slice(0,10);
-      if ($('quoteDate') && !$('quoteDate').value) $('quoteDate').value = today;
-      if ($('validUntil')) $('validUntil').value = addDaysISO($('quoteDate').value, 20);
-      if ($('quoteNo') && !$('quoteNo').value) $('quoteNo').value = genQuoteNo();
+
+      // 견적일: 오늘 날짜 자동 + 변경불가
+      if ($('quoteDate')) {
+        $('quoteDate').value = today;
+        $('quoteDate').setAttribute('readonly','readonly');
+        $('quoteDate').classList.add('noPick');
+      }
+
+      // 유효기간: 20일 + 변경불가
+      if ($('validUntil')) {
+        $('validUntil').value = addDaysISO(today, 20);
+        $('validUntil').setAttribute('readonly','readonly');
+        $('validUntil').classList.add('noPick');
+      }
+
+      // 견적번호: 상품내용 기준으로 브라우저 고정
+      if ($('quoteNo')) {
+        $('quoteNo').setAttribute('readonly','readonly');
+        syncQuoteNoBySignature();
+      }
     }
 
     function buildRows(state){
@@ -531,7 +591,8 @@ Tier1=200, Tier2=800, Tier3=1500</div>
     }
 
     function recalc(){
-      if ($('quoteDate')?.value && $('validUntil')) $('validUntil').value = addDaysISO($('quoteDate').value, 20);
+      // 상품 변경 여부에 따라 견적번호 유지/재생성
+      syncQuoteNoBySignature();
 
       const aiTier = $('aiTier')?.value || 'none';
       const qtyRecruiter = toNum($('qtyRecruiter')?.value);
@@ -564,7 +625,18 @@ Tier1=200, Tier2=800, Tier3=1500</div>
       $('total2').textContent = money(total);
 
       const rows = buildRows({ aiTier, qtyRecruiter, qtyJob, qtyLTI, lifeInclude, amtRecruiter, amtAI, amtJob, amtLTI, total });
-      $('items').textContent = rows.length ? `${rows.length}개 항목` : '-';
+
+      // ✅ 선택 항목: "제품이름" 표시
+      if (!rows.length) {
+        $('items').textContent = '-';
+      } else {
+        const names = rows.map(r => {
+          if (r.unit == null) return r.name;
+          if (r.qty == null) return r.name;
+          return `${r.name}${(r.qty && r.qty !== 1 && r.name !== 'AI Hiring Assistant') ? ` x${r.qty}` : (r.name === 'AI Hiring Assistant (Tier 1)' || r.name === 'AI Hiring Assistant (Tier 2)' || r.name === 'AI Hiring Assistant (Tier 3)') ? '' : (r.name === 'AI Hiring Assistant' ? '' : '')}`;
+        });
+        $('items').textContent = names.join(', ');
+      }
 
       const minNotice = document.getElementById('minNotice');
       if (minNotice) minNotice.style.display = (total > 0 && total < 10000) ? 'block' : 'none';
@@ -617,7 +689,7 @@ Tier1=200, Tier2=800, Tier3=1500</div>
     // ===== PDF 생성 =====
     async function makePdf(){
       setDefaultQuoteFields();
-      const { total, rows, aiTier } = recalc();
+      const { total, rows } = recalc();
       if (!rows.length) { toast('선택된 항목이 없습니다.'); return; }
 
       const company = $('company').value || '';
@@ -626,10 +698,6 @@ Tier1=200, Tier2=800, Tier3=1500</div>
       const quoteNo = $('quoteNo').value || genQuoteNo();
       const quoteDate = $('quoteDate').value || new Date().toISOString().slice(0,10);
       const validUntil = $('validUntil').value || addDaysISO(quoteDate, 20);
-
-      $('quoteNo').value = quoteNo;
-      $('quoteDate').value = quoteDate;
-      $('validUntil').value = validUntil;
 
       const { jsPDF } = window.jspdf;
       const doc = new jsPDF({ unit:'pt', format:'a4' });
@@ -676,18 +744,22 @@ Tier1=200, Tier2=800, Tier3=1500</div>
         margin: { left: marginX, right: marginX },
       });
 
-      const endY = doc.lastAutoTable.finalY + 16;
-      doc.setFontSize(12);
+      const endY = doc.lastAutoTable.finalY + 18;
+
+      // ✅ 총합계 크게 + VAT 작게
+      doc.setFontSize(14);
       doc.text(`Total (USD): ${money(total)}`, 360, endY);
+      doc.setFontSize(9);
+      doc.text('※ 부가세 없음', 360, endY + 12);
 
-      // ✅ 할인 문구(PDF에도)
-      doc.setFontSize(10);
-      doc.text('할인내용 : 그룹사 가격, 다년계약, 볼륨할인 등 문의', marginX, endY + 22);
-
-      // 하단 중앙 Partner 문구
+      // 하단 중앙 Partner 문구 (동일 폰트 + 큰 글씨)
+      const pageW = doc.internal.pageSize.getWidth();
       const pageH = doc.internal.pageSize.getHeight();
-      doc.setFontSize(10);
-      doc.text('Linkedin Korea Partner', doc.internal.pageSize.getWidth()/2, pageH - 36, { align: 'center' });
+      doc.setFontSize(18);
+      doc.text('Linkedin Korea Partner', pageW/2, pageH - 44, { align: 'center' });
+
+      doc.setFontSize(9);
+      doc.text('본 견적서는 단순 참고용입니다.', pageW/2, pageH - 28, { align: 'center' });
 
       doc.save(`LinkedIn_Quotation_${quoteNo}.pdf`);
     }
@@ -700,6 +772,7 @@ Tier1=200, Tier2=800, Tier3=1500</div>
     }
 
     async function copyLink(){
+      // "견적서 결과 링크복사" = 현재 입력/선택 상태를 그대로 복사
       const p = new URLSearchParams({
         company: $('company').value || '',
         contact: $('contact').value || '',
@@ -713,7 +786,7 @@ Tier1=200, Tier2=800, Tier3=1500</div>
         qtyLTI: $('qtyLTI').value || '0'
       });
       const url = `${location.origin}${location.pathname}?${p.toString()}`;
-      try { await navigator.clipboard.writeText(url); toast('입력값 링크가 복사되었습니다.'); }
+      try { await navigator.clipboard.writeText(url); toast('견적서 결과 링크가 복사되었습니다.'); }
       catch(e){ toast('복사 실패'); }
     }
 
@@ -723,8 +796,9 @@ Tier1=200, Tier2=800, Tier3=1500</div>
       set('company','company');
       set('contact','contact');
       set('email','email');
+      // quoteNo는 "상품내용 고정" 규칙이 있으니 링크로 들어와도 우선 세팅 후 동기화
       set('quoteNo','quoteNo');
-      set('quoteDate','quoteDate');
+      // 견적일은 항상 오늘로 고정이므로 링크 값은 무시 (요구사항)
       set('qtyRecruiter','qtyRecruiter');
       set('qtyJob','qtyJob');
       set('aiTier','aiTier');
@@ -736,14 +810,18 @@ Tier1=200, Tier2=800, Tier3=1500</div>
       $('company').value='';
       $('contact').value='';
       $('email').value='';
-      $('quoteNo').value='';
-      $('quoteDate').value='';
       $('qtyRecruiter').value='0';
       $('qtyJob').value='0';
       $('aiTier').value='none';
       $('lifeInclude').value='no';
       $('qtyLTI').value='0';
+
       history.replaceState({}, '', location.pathname);
+
+      // reset 시에는 새로운 시그니처가 되므로 quoteNo 재생성
+      localStorage.removeItem('lk_quote_sig');
+      localStorage.removeItem('lk_quote_no');
+
       setDefaultQuoteFields();
       recalc();
       toast('초기화 완료');
@@ -753,7 +831,8 @@ Tier1=200, Tier2=800, Tier3=1500</div>
     document.getElementById('btnCopyLink')?.addEventListener('click', async (e)=>{ e.preventDefault(); await copyLink(); });
     document.getElementById('btnReset')?.addEventListener('click', (e)=>{ e.preventDefault(); resetAll(); });
 
-    ['company','contact','email','quoteNo','quoteDate','qtyRecruiter','qtyJob','aiTier','lifeInclude','qtyLTI'].forEach(id=>{
+    // 견적일/유효기간/견적번호는 변경불가이므로 이벤트에서 제외
+    ['company','contact','email','qtyRecruiter','qtyJob','aiTier','lifeInclude','qtyLTI'].forEach(id=>{
       const el = document.getElementById(id);
       if (!el) return;
       el.addEventListener('input', ()=>{ setDefaultQuoteFields(); recalc(); });
